[package]
name = "treeson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui-tree-widget = { path = "./tui-rs-tree-widget" }
anyhow = "1.0.79"
clap = { version = "4.4.0", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.1"
serde_json = "1.0.113"
uuid = {version = "1.7.0", features =["v4"]}
